syntax = "proto3";

package commitment;

service CommitmentService {
  rpc SendCommittee(Committee) returns (Ack) {}
  rpc SendCommitment(Commitment) returns (Ack) {}
}

message Committee { repeated string publicKeys = 1; }

message Commitment {
  // String representation of the accumulator BigInteger
  string accumulator = 1;
  // The rolling hash is a Base64 string representation of the SHA-256
  // hash of the the previous rolling hash + the new accumulator.
  string rollingHash = 2;
  int32 block_height = 3;
}

message Ack {
  enum STATUS {
    OK = 0;
    ERROR = 1;
  };
  STATUS status = 2;
  string message = 3;
}
